update CORS url